--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 	<h1>Hello Git</h1>
+	<p>I bad commit 1</p>
+	<p>I bad commit 2</p>
+	<p>I bad commit 3</p>
+	<p>I bad commit 4</p>
+	<p>I bad commit 5</p>
 	
 </body>
 </html>
