--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
 	<p>I bad commit 3</p>
 	<p>I bad commit 4</p>
 	<p>I bad commit 5</p>
+
+	<section class="main">
+		<div class="main-item">
+			<p class="main-item-mod">test text #1</p>
+			<p class="main-item-mod">test text #2</p>
+			<p class="main-item-mod">test text #3</p>
+			<input type="text">
+			<button></button>
+		</div>
+		<div class="main-item">
+			<p class="main-item-mod">test text #1</p>
+			<p class="main-item-mod">test text #2</p>
+			<p class="main-item-mod">test text #3</p>
+			<input type="text">
+			<button></button>
+		</div>
+		<div class="main-item">
+			<p class="main-item-mod">test text #1</p>
+			<p class="main-item-mod">test text #2</p>
+			<p class="main-item-mod">test text #3</p>
+			<input type="text">
+			<button></button>
+		</div>
+	</section>
 	
 </body>
 </html>
