--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
 	<link rel="stylesheet" href="./style.css" class="css">
 </head>
 <body>
-	<h1>Hello Git</h1>
-	<p>I bad commit 1</p>
-	<p>I bad commit 2</p>
-	<p>I bad commit 3</p>
-	<p>I bad commit 4</p>
-	<p>I bad commit 5</p>
-
+	<h1>Hello Git
 	<section class="main">
 		<div class="main-item">
 			<p class="main-item-mod">test text #1</p>
