Revert "Revert "Revert "Revert "bed commit""""
This reverts commit 91d6c70bd3f475413b37ec6edce754c1a019e914.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
 	<link rel="stylesheet" href="./style.css" class="css">
 </head>
 <body>
-	<h1>Hello Git
-	<section class="main">
-		<div class="main-item">
-			<p class="main-item-mod">test text #1</p>
-			<p class="main-item-mod">test text #2</p>
-			<p class="main-item-mod">test text #3</p>
-			<input type="text">
-			<button></button>
-		</div>
+	<h1>Hello Git</h1>
 		<div class="main-item">
 			<p class="main-item-mod">test text #1</p>
 			<p class="main-item-mod">test text #2</p>
