add modifieds in index

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 			<input type="text">
 			<button></button>
 		</div>
+		<div class="branchs">
+			<p>commit for dev branch</p>
+		</div>
 	</section>
 	
 </body>
