add modifieds index for master

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 			<p class="main-item-mod">test text #3</p>
 			<input type="text">
 			<button></button>
+			<div class="master">
+				<p>it's master branch</p>
+			</div>
 		</div>
 			<div class="second-branch">
 				<p>commit in second-branch</p>
