add modifieds index for master

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<p class="main-item-mod">test text #3</p>
 			<input type="text">
 			<button></button>
+		</div>
 			<div class="master">
 				<p>it's master branch</p>
 			</div>
