--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<h1>Hello Git</h1>
+	<section>
 		<div class="main-item">
 			<p class="main-item-mod">test text #1</p>
 			<p class="main-item-mod">test text #2</p>
