--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 			<p>commit for dev branch</p>
 		</div>
 	</section>
-	<script url="script.js"></script>
+	<script src="./script.js"></script>
 </body>
 </html>
