modefied index & scripts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<p class="main-item-mod">test text #1</p>
 			<p class="main-item-mod">test text #2</p>
 			<p class="main-item-mod">test text #3</p>
-			<input type="text">
+			<input type="text" onchange="hendleChenge(this)">
 			<button></button>
 		</div>
 		<div class="main-item">
